add backend type to load snap API
