# src/api_server/src/request/snapshot.rs
@@ -107,7 +107,7 @@ mod tests {
 
         let mut expected_cfg = LoadSnapshotParams {
             snapshot_path: PathBuf::from("foo"),
-            mem_file_path: PathBuf::from("bar"),
+            mem_backend_path: PathBuf::from("bar"),
             enable_diff_snapshots: false,
             resume_vm: false,
         };
@@ -125,7 +125,7 @@ mod tests {
 
         expected_cfg = LoadSnapshotParams {
             snapshot_path: PathBuf::from("foo"),
-            mem_file_path: PathBuf::from("bar"),
+            mem_backend_path: PathBuf::from("bar"),
             enable_diff_snapshots: true,
             resume_vm: false,
         };
@@ -144,7 +144,7 @@ mod tests {
 
         expected_cfg = LoadSnapshotParams {
             snapshot_path: PathBuf::from("foo"),
-            mem_file_path: PathBuf::from("bar"),
+            mem_backend_path: PathBuf::from("bar"),
             enable_diff_snapshots: false,
             resume_vm: true,
         };
