# src/api_server/swagger/firecracker.yaml
@@ -1045,16 +1045,24 @@ definitions:
   SnapshotLoadParams:
     type: object
     required:
-      - mem_file_path
+      - mem_backend_path
       - snapshot_path
     properties:
       enable_diff_snapshots:
         type: boolean
         description:
           Enable support for incremental (diff) snapshots by tracking dirty guest pages.
-      mem_file_path:
+      mem_backend_type:
         type: string
-        description: Path to the file that contains the guest memory to be loaded.
+        enum:
+          - File
+          - UffdOverUDS
+      mem_backend_path:
+        type: string
+        description: Based on 'mem_backend_type' it is either
+        1) Path to the file that contains the guest memory to be loaded,
+        2) Path to the UDS where a custom page-fault handler process is listening
+        for the UFFD set up by Firecracker to handle its guest memory page faults.
       snapshot_path:
         type: string
         description: Path to the file that contains the microVM state to be loaded.
